Fix section header format in meta.ini

--- a/meta.ini
+++ b/meta.ini
@@ -1,4 +1,4 @@
-custom]
+[custom]
 ; ==========================================================
 ; 方案 B 在方案a上，所有应用层增加手动 自动选择。
 ; ==========================================================
