--- a/meta.ini
+++ b/meta.ini
@@ -1,6 +1,6 @@
 [custom]
 ; ==========================================================
-; 方案 B 在方案A上，所有应用层增加手动自动选择。
+; 方案 B 在方案a上，所有应用层增加手动 自动选择。
 ; ==========================================================
 enable_rule_generator=true
 overwrite_original_rules=true
@@ -15,6 +15,7 @@ exclude=流量|套餐|到期|剩余|重置|官网
 ; ==========================================================
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
+
 ; --- 私网直连 ---
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
@@ -40,13 +41,10 @@ ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ; --- 核心应用 ---
 ruleset=📦 Notion,[]GEOSITE,Notion
 ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
-
 ruleset=📨 Telegram,[]GEOSITE,telegram
 ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
-
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
-
 ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🎬 YouTube,[]GEOSITE,youtube
 ruleset=🎥 Netflix,[]GEOSITE,netflix
@@ -68,9 +66,7 @@ ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🟦 OKX,[]GEOSITE,okx
 ruleset=🟨 Binance,[]GEOSITE,binance
 ruleset=🟪 Bybit,[]GEOSITE,bybit
-; ==========================================================
-; --- 若使用上方geo没有匹配到可以用下方url来匹配，需先在上方删除该应用的ruleset ---
-; --- ruleset=🟦 OKX,clash-domain:https://xxx/okx.yaml,86400
+
 ; ==========================================================
 ; --- 社交 / 通讯 ---
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
@@ -79,10 +75,8 @@ ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
 ; --- Google / Microsoft（新增） ---
 ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
 ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
-
 ruleset=🔎 Google,[]GEOSITE,google
 ruleset=🔎 Google,[]GEOIP,google,no-resolve
-
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
 ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
 
@@ -95,20 +89,60 @@ ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aether
 ; --- 最终兜底 ---
 ruleset=🐟 漏网之鱼,[]FINAL
 
-
 ; ==========================================================
 ; 2) 应用分流策略组（UI 主入口，不越权）
-;    说明：每个应用都加入「🧊 冷门节点」可选
 ; ==========================================================
-custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]DIRECT`[]🌐 Default
-custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]DIRECT`[]🌐 Default
-custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]🌐 Default
-custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]🌐 Default
-custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]🌐 Default
-custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]🌐 Default
-custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]🌐 Default
+custom_proxy_group=📦 Notionselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🍎 Appleselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🤖 ChatGPTselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🧠 AIselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=📨 Telegramselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=📞 即时通讯select[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=💬 社交媒体select[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🎬 YouTubeselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🎥 Netflixselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🎵 TikTokselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=📸 Instagramselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🐦 Xselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🧑‍💻 GitHubselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🚝 测速工具select[]DIRECT[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🎮 Steamselect[]DIRECT[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🟦 OKXselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]DIRECT[]🧭 手动选择[]♻️ 自动选择[]🌐 Default
+custom_proxy_group=🟨 Binanceselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=🟪 Bybitselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
 
-custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]🌐 Default
-custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动选择`[]🌐 Default
+; Adobe：允许一键禁止联网
+custom_proxy_group=🟥 Adobeselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]REJECT[]🌐 Default
 
-custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]♻️ 自动
+custom_proxy_group=🔎 Googleselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]🌐 Default
+custom_proxy_group=☁️ cloudflareselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]🌐 Default
+
+; Microsoft：允许直连优先，同时也能选五区/冷门/Default
+custom_proxy_group=🪟 Microsoftselect[]DIRECT[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]♻️ 自动选择[]🧭 手动选择[]🌐 Default
+
+; ==========================================================
+; 3) Default / 漏网之鱼（唯一允许全节点）
+; ==========================================================
+custom_proxy_group=🚀 手动选择select[]♻️ 自动选择[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]DIRECT
+custom_proxy_group=🌐 Defaultselect[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]♻️ 自动选择[]🧭 手动选择[]DIRECT
+custom_proxy_group=🐟 漏网之鱼select[]🌐 Default[]DIRECT[]♻️ 自动选择[]🧊 冷门节点[]🧭 手动选择[]🚀 手动选择
+
+; ==========================================================
+; 4) 非标端口
+; ==========================================================
+custom_proxy_group=🔀 非标端口select[]🐟 遵循规则[]DIRECT
+custom_proxy_group=🐟 遵循规则select[]🐟 漏网之鱼
+
+; ==========================================================
+; 5) 国家节点测速组（保持不动）
+; ==========================================================
+custom_proxy_group=🧭 手动选择select[]🇭🇰 HK[]🇺🇸 US[]🇯🇵 JP[]🇸🇬 SG[]🇹🇼 TW[]🧊 冷门节点[]🧭 手动选择[]♻️ 自动选择[]DIRECT[]🌐 Default
+custom_proxy_group=♻️ 自动选择url-test.*https://www.gstatic.com/generate_204300,,50
+custom_proxy_group=🇭🇰 HKurl-test(?i)(🇭🇰|香港|\\bHK\\b|hongkong)http://www.gstatic.com/generate_204300,,50
+custom_proxy_group=🇺🇸 USurl-test(?i)(🇺🇸|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)http://www.gstatic.com/generate_204300,,50
+custom_proxy_group=🇯🇵 JPurl-test(?i)(🇯🇵|日本|\\bJP\\b|tokyo|osaka)http://www.gstatic.com/generate_204300,,50
+custom_proxy_group=🇸🇬 SGurl-test(?i)(🇸🇬|新加坡|\\bSG\\b|singapore)http://www.gstatic.com/generate_204300,,50
+custom_proxy_group=🇹🇼 TWurl-test(?i)(🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet)http://www.gstatic.com/generate_204300,,50
+
+; 冷门节点池（排除 HK/JP/TW/US/SG）——selector 手动选择
+custom_proxy_group=🧊 冷门节点select(?i)^(?!.*(🇭🇰|香港|\\bHK\\b|hong\\s*kong|🇯🇵|日本|\\bJP\\b|tokyo|osaka|🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|新加坡|\\bSG\\b|singapore|🇺🇸|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york)).*
