--- a/meta.ini
+++ b/meta.ini
@@ -172,7 +172,7 @@ custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 
 ; ==========================================================
-; 5) 国家节点测速组（去掉了所有可能导致报错的 \\b）
+; 5) 国家节点测速组
 ; ==========================================================
 custom_proxy_group=🧭 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
