--- a/meta.ini
+++ b/meta.ini
@@ -13,10 +13,9 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 ; ==========================================================
-; 节点清洗：剔除机场展示/说明/防失联/流量提示节点
+; 节点清洗：微调 exclude，防止误杀
 ; ==========================================================
-exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|说明|使用说明|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Expire|Official|Website
-
+exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
 ; 1) 规则（自上而下优先级）
@@ -172,14 +171,17 @@ custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 
 ; ==========================================================
-; 5) 国家节点测速组
+; 5) 国家节点测速组 · 最终加固版
 ; ==========================================================
 custom_proxy_group=🧭 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 HK`url-test`(🇭🇰|香港|HK|HongKong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 TW`url-test`(🇹🇼|台湾|TW|Taiwan|Taipei|Hinet)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 JP`url-test`(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 SG`url-test`(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 US`url-test`(🇺🇸|美国|US|United States|Los Angeles)`http://www.gstatic.com/generate_204`300,,50
-; 冷门节点（不包含上述关键词的）
-custom_proxy_group=🧊 冷门节点`select`^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇹🇼|台湾|TW|🇸🇬|新加坡|SG|🇺🇸|美国|US)).*
+
+; 增加 (?i) 确保大小写不敏感，增加空格匹配兼容性
+custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|台湾|TW|Taiwan|Taipei|Hinet)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`300,,50
+
+; 🧊 冷门节点：加固正则排除逻辑，找回被漏掉的 VLESS
+custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇹🇼|台湾|TW|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|Seoul|London)).*
