--- a/meta.ini
+++ b/meta.ini
@@ -23,9 +23,12 @@ ruleset=DIRECT,[]GEOIP,private,no-resolve
 ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
 ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
 
-; --- 🚀 重点：🔞 限制级自动更新规则 (放在国内直连之前，确保优先级) ---
+; --- 🚀 重点：🔞 限制级 (修正语法错误，防止 Proxy Not Found) ---
+; 1. 远程自动更新规则集
 ruleset=🔞 限制级,https://testingcf.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/category-porn.txt,86400
-ruleset=🔞 限制级,clash-domain:['pornlulu.com','pornhub.com'],28800
+; 2. 补丁域名 (分开写，不要用逗号连接，防止解析器报错)
+ruleset=🔞 限制级,clash-domain:pornlulu.com,28800
+ruleset=🔞 限制级,clash-domain:pornhub.com,28800
 
 ; --- 国内直连 ---
 ruleset=DIRECT,[]GEOSITE,cn
@@ -81,7 +84,7 @@ custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP
 custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
-; --- 🔞 限制级 专用策略组 (首选台湾) ---
+; --- 🔞 限制级 专用策略组 ---
 custom_proxy_group=🔞 限制级`select`[]🇹🇼 TW`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
 custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT`[]🌐 Default
