--- a/meta.ini
+++ b/meta.ini
@@ -1,6 +1,6 @@
 [custom]
 ; ==========================================================
-; 方案 A · 最终修正版（加入 Google / Microsoft + 冷门节点）
+; 方案 A · 2026 最终完美版 (修正 Instagram 报错 & 限制级规则)
 ; ==========================================================
 
 enable_rule_generator=true
@@ -10,12 +10,11 @@ overwrite_original_rules=true
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则（自上而下优先级）
+; 1) 规则部分 (自上而下优先级)
 ; ==========================================================
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 
-; --- 私网直连 ---
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
@@ -23,10 +22,8 @@ ruleset=DIRECT,[]GEOIP,private,no-resolve
 ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
 ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
 
-; --- 🚀 重点：🔞 限制级 (修正语法错误，防止 Proxy Not Found) ---
-; 1. 远程自动更新规则集
+; --- 🔞 限制级 (首选台湾) ---
 ruleset=🔞 限制级,https://testingcf.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/category-porn.txt,86400
-; 2. 补丁域名 (分开写，不要用逗号连接，防止解析器报错)
 ruleset=🔞 限制级,clash-domain:pornlulu.com,28800
 ruleset=🔞 限制级,clash-domain:pornhub.com,28800
 
@@ -34,13 +31,7 @@ ruleset=🔞 限制级,clash-domain:pornhub.com,28800
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
-; --- 国内可用 / 下载 / BT ---
-ruleset=DIRECT,[]GEOSITE,google-cn
-ruleset=DIRECT,[]GEOSITE,category-games@cn
-ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
-ruleset=DIRECT,[]GEOSITE,category-public-tracker
-
-;------------请在下方区域内添加应用---------------
+; --- 核心应用分流 ---
 ruleset=📦 Notion,[]GEOSITE,Notion
 ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
 ruleset=📨 Telegram,[]GEOSITE,telegram
@@ -60,7 +51,6 @@ ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🟦 OKX,[]GEOSITE,okx
 ruleset=🟨 Binance,[]GEOSITE,binance
 ruleset=🟪 Bybit,[]GEOSITE,bybit
-;------------请在上方区域内添加应用---------------
 
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
 ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
@@ -72,7 +62,7 @@ ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aether
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
-; 2) 应用分流策略组
+; 2) 策略组部分 (必须与上方 Ruleset 名称严格一致)
 ; ==========================================================
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
@@ -82,27 +72,33 @@ custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 J
 custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🧭 手动选择`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
+custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
+custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 
 ; --- 🔞 限制级 专用策略组 ---
 custom_proxy_group=🔞 限制级`select`[]🇹🇼 TW`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
 custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT`[]🌐 Default
 custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
 ; ==========================================================
-; 3) 兜底与测速组
+; 3) 兜底与节点组
 ; ==========================================================
 custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]DIRECT
 custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]♻️ 自动选择`[]🧭 手动选择`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🌐 Default`[]DIRECT`[]♻️ 自动选择`[]🧊 冷门节点`[]🧭 手动选择`[]🚀 手动选择
 
-custom_proxy_group=🧭 手动选择`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|台湾|TW|Taiwan|Taipei|Hinet)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇹🇼|台湾|TW|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|Seoul|London)).*
+custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
+custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
+
+custom_proxy_
