--- a/meta.ini
+++ b/meta.ini
@@ -84,7 +84,7 @@ custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯
 custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-
+custom_proxy_group=🔀 非标端口`select`[]DIRECT`[]🌐 Default
 custom_proxy_group=🔞 限制级`select`[]🇹🇼 TW`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT`[]🌐 Default
 custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
