--- a/meta.ini
+++ b/meta.ini
@@ -1,31 +1,46 @@
 [custom]
 ; ==========================================================
-; 方案 A · 2026 最终修正版（彻底解决 Proxy Not Found 报错）
+; 2026 最终修正版（加入 Google / Microsoft + 冷门节点）
+; - 仅使用 GEOSITE / GEOIP（不再引用不存在的 yaml）
+; - 保留 HK / TW / JP / SG / US 五个 url-test 体系不动
+; - 应用组不提供“全节点手动 / 全节点自动”越权
+; - 全节点手动 / 自动 只放在 Default / 漏网之鱼
+; - 新增：🧊 冷门节点（排除 HK/JP/TW/US/SG），并让所有应用可选
+; - Adobe 提供 REJECT（可禁止联网）
 ; ==========================================================
 
 enable_rule_generator=true
 overwrite_original_rules=true
 
-; 节点清洗
+; ==========================================================
+; 节点清洗：微调 exclude，防止误杀
+; ==========================================================
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
 ; 1) 规则（自上而下优先级）
 ; ==========================================================
+;屏蔽adobe 给足权限排最上，单纯在应用层选择屏蔽只会屏蔽国外链接，因为国内也能访问adobe部分页面，因此在openclash中如果选择了绕过大陆，
+;国内能访问的adobe域名或ip也就跟着绕过了内核直接走了直连，所以还需在【流量控制】菜单下的【绕过指定区域 IPv4 黑名单中】加上adobe域名：如下
+;adobe.com
+;adobelogin.com
+;adobe.io
+;behance.net
+
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 
+; --- 私网直连 ---
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; --- Aethersailor 补丁 ---
+; --- Aethersailor 直连补丁 ---
 ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
 ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
 
-; --- 🔞 限制级 (首选台湾) ---
-ruleset=🔞 限制级,https://testingcf.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/category-porn.txt,86400
-ruleset=🔞 限制级,clash-domain:pornlulu.com,28800
-ruleset=🔞 限制级,clash-domain:pornhub.com,28800
+; --- Aethersailor 代理补丁（仅兜底用，不越权）---
+ruleset=🚀 手动选择,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
+ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
 
 ; --- 国内直连 ---
 ruleset=DIRECT,[]GEOSITE,cn
@@ -36,75 +51,137 @@ ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,category-games@cn
 ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
 ruleset=DIRECT,[]GEOSITE,category-public-tracker
+;------------请在下方区域内添加应用---------------
+; --- 核心应用 ---
 
-;------------ 核心应用分流 ------------
 ruleset=📦 Notion,[]GEOSITE,Notion
+ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
+
 ruleset=📨 Telegram,[]GEOSITE,telegram
+ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
+
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
+
 ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🎬 YouTube,[]GEOSITE,youtube
 ruleset=🎥 Netflix,[]GEOSITE,netflix
+ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
+
+; --- 海外主流应用补充 ---
 ruleset=🎵 TikTok,[]GEOSITE,tiktok
+ruleset=🎵 TikTok,[]GEOIP,tiktok,no-resolve
 ruleset=📸 Instagram,[]GEOSITE,instagram
 ruleset=🐦 X,[]GEOSITE,twitter
+
+; --- 开发 / 工具 ---
 ruleset=🛠 GitHub,[]GEOSITE,github
+ruleset=🛠 GitHub,[]GEOIP,github,no-resolve
 ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 ruleset=🎮 Steam,[]GEOSITE,steam
+
+; --- 交易所 & Adobe（全部走 GEOSITE）---
 ruleset=🟦 OKX,[]GEOSITE,okx
 ruleset=🟨 Binance,[]GEOSITE,binance
 ruleset=🟪 Bybit,[]GEOSITE,bybit
+; ==========================================================
+; --- 若使用上方geo没有匹配到可以用下方url来匹配，需先在上方删除该应用的ruleset ---
+; --- ruleset=🟦 OKX,clash-domain:https://xxx/okx.yaml,86400
+; ==========================================================
 
-;------------ 兜底分类 ------------
+;------------请在上方区域内添加应用---------------
+; --- 社交 / 通讯 ---
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
 ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
+; --- Google / Microsoft/cf（新增） ---
 ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
+ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
+
 ruleset=🔎 Google,[]GEOSITE,google
+ruleset=🔎 Google,[]GEOIP,google,no-resolve
+
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
+ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
+
+; --- GFW 兜底 ---
 ruleset=🚀 手动选择,[]GEOSITE,gfw
+
+; --- 非标端口 ---
 ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
+
+; --- 最终兜底 ---
 ruleset=🐟 漏网之鱼,[]FINAL
 
+
 ; ==========================================================
-; 2) 应用分流策略组 (必须确保名称与上方 Ruleset 完全一致)
+; 2) 应用分流策略组（UI 主入口，不越权）
+;    说明：每个应用都加入「🧊 冷门节点」可选
 ; ==========================================================
+;------------请在下方区域内添加应用---------------
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+
 custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+
 custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+
+
 custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🧭 手动选择`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+
 custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🔞 限制级`select`[]🇹🇼 TW`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT`[]🌐 Default
+;------------请在上方区域内添加---------------
+; Adobe：允许一键禁止联网
+custom_proxy_group=🟥 Adobe`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]REJECT`[]🌐 Default
 custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+; Microsoft：允许直连优先，同时也能选五区/冷门/Default
 custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🔀 非标端口`select`[]DIRECT`[]🌐 Default`[]🚀 手动选择
-custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
+
 ; ==========================================================
-; 3) 兜底与节点逻辑
+; 3) Default / 漏网之鱼（唯一允许全节点）
+;    同时新增：🧊 冷门节点（只收非 HK/JP/TW/US/SG 的节点）
 ; ==========================================================
+
+; 兜底“手动选择”（不越权应用，只用于 Default/漏网）
 custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]DIRECT
+
+; Default 出口（同样允许冷门节点参与）
 custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]♻️ 自动选择`[]🧭 手动选择`[]DIRECT
+
 custom_proxy_group=🐟 漏网之鱼`select`[]🌐 Default`[]DIRECT`[]♻️ 自动选择`[]🧊 冷门节点`[]🧭 手动选择`[]🚀 手动选择
 
+
+; ==========================================================
+; 4) 非标端口
+; ==========================================================
+custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
+custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
+
+
+; ==========================================================
+; 5) 国家节点测速组 · 最终加固版
+; ==========================================================
 custom_proxy_group=🧭 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
+
+; 增加 (?i) 确保大小写不敏感，增加空格匹配兼容性
 custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|台湾|TW|Taiwan|Taipei|Hinet)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`300,,50
+
+; 🧊 冷门节点：加固正则排除逻辑，找回被漏掉的 VLESS
 custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇹🇼|台湾|TW|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|Seoul|London)).*
