--- a/meta.ini
+++ b/meta.ini
@@ -1,33 +1,29 @@
 [custom]
 ; ==========================================================
-; 2026 最终加固优化版 (全量替换)
-; - 逻辑：应用组 -> 核心调度 -> 国家组/冷门组/全部节点
+; 2026 最终精简优化版 - 台湾/韩国并入冷门组
 ; ==========================================================
 
 enable_rule_generator=true
 overwrite_original_rules=true
 
-; ==========================================================
 ; 节点清洗
-; ==========================================================
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则部分 (自上而下匹配)
+; 1) 规则部分
 ; ==========================================================
-; --- 拦截与私网 ---
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; --- Aethersailor 补丁 ---
+; Aethersailor 补丁
 ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
 ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
 ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
 ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
 
-; --- 国内直连 ---
+; 国内直连
 ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
@@ -35,7 +31,7 @@ ruleset=DIRECT,[]GEOSITE,category-games@cn
 ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
 ruleset=DIRECT,[]GEOSITE,category-public-tracker
 
-; --- 核心应用分流 ---
+; 核心应用
 ruleset=📦 Notion,[]GEOSITE,Notion
 ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
 ruleset=📨 Telegram,[]GEOSITE,telegram
@@ -58,7 +54,7 @@ ruleset=🟦 OKX,[]GEOSITE,okx
 ruleset=🟨 Binance,[]GEOSITE,binance
 ruleset=🟪 Bybit,[]GEOSITE,bybit
 
-; --- 基础设施 ---
+; 基础设施
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
 ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
 ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
@@ -68,68 +64,57 @@ ruleset=🔎 Google,[]GEOIP,google,no-resolve
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
 ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
 
-; --- 兜底 ---
+; 兜底
 ruleset=🚀 核心调度,[]GEOSITE,gfw
 ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
-; 2) 应用分流策略组 (UI 主入口)
+; 2) 应用分流策略组 (清理了 TW 选项)
 ; ==========================================================
-custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟥 Adobe`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]REJECT`[]🌐 Default
-custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
+custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
+custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
+custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
+custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
+custom_proxy_group=🟥 Adobe`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]REJECT`[]🌐 Default
+custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
 ; ==========================================================
 ; 3) 核心调度层
 ; ==========================================================
-; 【🚀 核心调度】：原手动选择，作为全局代理调度中心
-custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
-
-; 【🌐 Default】：通用代理出口
-custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
-
-; 【🐟 漏网之鱼】：兜底策略，默认指向核心调度（代理）
+custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
+custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT`[]♻️ 自动选择`[]🧊 冷门节点`[]🧭 全部节点
-
-; --- 非标端口 ---
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 ; ==========================================================
 ; 4) 节点自动测速与全部节点池
 ; ==========================================================
-; 【🧭 全部节点】：展示订阅内所有节点
 custom_proxy_group=🧭 全部节点`select`.*
-
-; 【♻️ 自动选择】：全局最优节点自动测速
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-; 【🧊 冷门节点】：排除主流地区后的节点自动测速
-custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇹🇼|台湾|TW|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|Seoul|London)).*`http://www.gstatic.com/generate_204`300,,50
+; 【🧊 冷门节点】：现在包含 韩国(Seoul)、台湾(TW) 等所有非主流大区
+custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|London)).*`http://www.gstatic.com/generate_204`300,,50
 
-; --- 国家/地区 专属测速组 ---
+; 专属测速组
 custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|台湾|TW|Taiwan|Taipei|Hinet)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`300,,50
