--- a/meta.ini
+++ b/meta.ini
@@ -1,6 +1,6 @@
 [custom]
 ; ==========================================================
-; 2026 最终精简优化版 - 台湾/韩国并入冷门组
+; 2026 Dat 数据库适配版 - 修正匹配逻辑顺序
 ; ==========================================================
 
 enable_rule_generator=true
@@ -10,35 +10,25 @@ overwrite_original_rules=true
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则部分
+; 1) 规则部分 (严格按照优先级排序)
 ; ==========================================================
+
+; --- [第一级：绝对拦截与私有直连] ---
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; Aethersailor 补丁
+; --- [第二级：特定补丁规则] ---
 ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
 ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
-ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
-ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
 
-; 国内直连
-ruleset=DIRECT,[]GEOSITE,google-cn
-ruleset=DIRECT,[]GEOSITE,cn
-ruleset=DIRECT,[]GEOIP,cn,no-resolve
-ruleset=DIRECT,[]GEOSITE,category-games@cn
-ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
-ruleset=DIRECT,[]GEOSITE,category-public-tracker
-
-; 核心应用
-ruleset=📦 Notion,[]GEOSITE,Notion
-ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
-ruleset=📨 Telegram,[]GEOSITE,telegram
-ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
+; --- [第三级：核心应用分流 (必须放在国内直连之前)] ---
+ruleset=📦 Notion,[]GEOSITE,notion
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
-ruleset=🍎 Apple,[]GEOSITE,apple
+ruleset=📨 Telegram,[]GEOSITE,telegram
+ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
 ruleset=🎬 YouTube,[]GEOSITE,youtube
 ruleset=🎥 Netflix,[]GEOSITE,netflix
 ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
@@ -48,29 +38,41 @@ ruleset=📸 Instagram,[]GEOSITE,instagram
 ruleset=🐦 X,[]GEOSITE,twitter
 ruleset=🛠 GitHub,[]GEOSITE,github
 ruleset=🛠 GitHub,[]GEOIP,github,no-resolve
-ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🟦 OKX,[]GEOSITE,okx
 ruleset=🟨 Binance,[]GEOSITE,binance
 ruleset=🟪 Bybit,[]GEOSITE,bybit
-
-; 基础设施
-ruleset=📞 即时通讯,[]GEOSITE,category-communication
-ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
-ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
-ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
+ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🔎 Google,[]GEOSITE,google
 ruleset=🔎 Google,[]GEOIP,google,no-resolve
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
 ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
+ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
+ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
 
-; 兜底
+; --- [第四级：基础设施与社交媒体] ---
+ruleset=📞 即时通讯,[]GEOSITE,category-communication
+ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
+ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
+
+; --- [第五级：国内直连补丁 (将之前的直连下移至此)] ---
+ruleset=DIRECT,[]GEOSITE,google-cn
+ruleset=DIRECT,[]GEOSITE,apple-cn
+ruleset=DIRECT,[]GEOSITE,cn
+ruleset=DIRECT,[]GEOSITE,category-games@cn
+ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
+ruleset=DIRECT,[]GEOSITE,category-public-tracker
+ruleset=DIRECT,[]GEOIP,cn,no-resolve
+
+; --- [第六级：兜底与非标] ---
 ruleset=🚀 核心调度,[]GEOSITE,gfw
+ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
+ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
 ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
-; 2) 应用分流策略组 (清理了 TW 选项)
+; 2) 策略组设置 (保持原样即可)
 ; ==========================================================
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
@@ -95,25 +97,15 @@ custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`
 custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
-; ==========================================================
-; 3) 核心调度层
-; ==========================================================
 custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
 custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT`[]♻️ 自动选择`[]🧊 冷门节点`[]🧭 全部节点
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
-; ==========================================================
-; 4) 节点自动测速与全部节点池
-; ==========================================================
 custom_proxy_group=🧭 全部节点`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-
-; 【🧊 冷门节点】：现在包含 韩国(Seoul)、台湾(TW) 等所有非主流大区
 custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|London)).*`http://www.gstatic.com/generate_204`300,,50
-
-; 专属测速组
 custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
