--- a/meta.ini
+++ b/meta.ini
@@ -1,7 +1,8 @@
 [custom]
 ; ==========================================================
-; 2G 内存极致性能版 - 2026 适配 GeoIP/GeoSite Dat
-; 更新频率：172800秒 (2880分钟 / 2天)
+; 全能兼容版 - 适配 GeoIP Dat / MMDB 两种格式
+; 核心逻辑：GEOSITE 负责应用识别，GEOIP 只负责国家识别
+; 更新频率：172800秒 (2天)
 ; ==========================================================
 
 enable_rule_generator=true
@@ -11,33 +12,28 @@ overwrite_original_rules=true
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则部分 (严格优先级：拦截 > 海外应用 > 国内直连 > 补漏)
+; 1) 规则部分 (极高兼容性写法)
 ; ==========================================================
 
 ; --- [第一级：拦截与私有网] ---
 ruleset=🟥 Adobe,[]GEOSITE,adobe
-ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; --- [第二级：在线补丁 (已设为2天更新)] ---
+; --- [第二级：在线补丁 (2天更新)] ---
 ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,172800
 ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,172800
 
-; --- [第三级：核心海外应用 (确保走代理，不被国内库误杀)] ---
+; --- [第三级：核心海外应用 (全部改用 GEOSITE 兼容)] ---
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 ruleset=📨 Telegram,[]GEOSITE,telegram
-ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
 ruleset=🎬 YouTube,[]GEOSITE,youtube
 ruleset=🎥 Netflix,[]GEOSITE,netflix
-ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
 ruleset=🎵 TikTok,[]GEOSITE,tiktok
-ruleset=🎵 TikTok,[]GEOIP,tiktok,no-resolve
 ruleset=📸 Instagram,[]GEOSITE,instagram
 ruleset=🐦 X,[]GEOSITE,twitter
 ruleset=🛠 GitHub,[]GEOSITE,github
-ruleset=🛠 GitHub,[]GEOIP,github,no-resolve
 ruleset=📦 Notion,[]GEOSITE,notion
 ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🟦 OKX,[]GEOSITE,okx
@@ -45,18 +41,15 @@ ruleset=🟨 Binance,[]GEOSITE,binance
 ruleset=🟪 Bybit,[]GEOSITE,bybit
 ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🔎 Google,[]GEOSITE,google
-ruleset=🔎 Google,[]GEOIP,google,no-resolve
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
-ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
 ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
-ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
 
 ; --- [第四级：社交与通讯] ---
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
 ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
 ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
 
-; --- [第五级：国内直连 (利用 Dat 数据库极速匹配)] ---
+; --- [第五级：国内直连 (这是最稳的国家代码)] ---
 ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,apple-cn
 ruleset=DIRECT,[]GEOSITE,cn
@@ -65,11 +58,11 @@ ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
 ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
-; --- [第六级：核心调度与漏网之鱼兜底] ---
+; --- [第六级：核心调度与兜底] ---
 ruleset=🚀 核心调度,[]GEOSITE,gfw
 ruleset=🚀 核心调度,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,172800
 ruleset=🚀 核心调度,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_Proxy_Classical_IP.yaml,172800
-ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,172800
+ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_Port_Direct.yaml,172800
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
