--- a/meta.ini
+++ b/meta.ini
@@ -1,6 +1,7 @@
 [custom]
 ; ==========================================================
-; 2026 终极全能版 - 适配 2G 内存 & Dat/MMDB 双兼容
+; 2026 最终修正版 - 2G 内存 & MMDB 模式 & GitHub 原链
+; 频率：172800 (2天) | 节点：首选新加坡 (SG)
 ; ==========================================================
 
 enable_rule_generator=true
@@ -10,7 +11,7 @@ overwrite_original_rules=true
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则部分 (优先级顺序：拦截 > 海外应用 > 国内直连 > 补漏)
+; 1) 规则部分 (已全部更换为 GitHub 官方原链)
 ; ==========================================================
 
 ; --- [第一级：绝对拦截与私有网] ---
@@ -18,94 +19,63 @@ ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; --- [第二级：特定补丁规则 (2天更新)] ---
-ruleset=DIRECT,clash-domain:https://fastly.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,172800
-ruleset=DIRECT,clash-classic:https://fastly.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,172800
+; --- [第二级：直连补丁规则 (GitHub 原链)] ---
+ruleset=DIRECT,clash-domain:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct_Domain.yaml,172800
+ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct_Classical_IP.yaml,172800
 
-; --- [第三级：核心海外应用 (确保走代理)] ---
+; --- [第三级：核心海外应用 (优先保证 AI/Gemini)] ---
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 ruleset=📨 Telegram,[]GEOSITE,telegram
 ruleset=🎬 YouTube,[]GEOSITE,youtube
 ruleset=🎥 Netflix,[]GEOSITE,netflix
 ruleset=🎵 TikTok,[]GEOSITE,tiktok
-ruleset=📸 Instagram,[]GEOSITE,instagram
-ruleset=🐦 X,[]GEOSITE,twitter
 ruleset=🛠 GitHub,[]GEOSITE,github
 ruleset=📦 Notion,[]GEOSITE,notion
-ruleset=🎮 Steam,[]GEOSITE,steam
-ruleset=🟦 OKX,[]GEOSITE,okx
-ruleset=🟨 Binance,[]GEOSITE,binance
-ruleset=🟪 Bybit,[]GEOSITE,bybit
 ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🔎 Google,[]GEOSITE,google
 ruleset=🪟 Microsoft,[]GEOSITE,microsoft
-ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
 
-; --- [第四级：基础设施与社交媒体] ---
-ruleset=📞 即时通讯,[]GEOSITE,category-communication
-ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
-ruleset=🚝 测速工具,[]GEOSITE,category-speedtest
-
-; --- [第五级：国内直连 (CN 识别交由数据库)] ---
-ruleset=DIRECT,[]GEOSITE,google-cn
-ruleset=DIRECT,[]GEOSITE,apple-cn
+; --- [第四级：国内直连] ---
 ruleset=DIRECT,[]GEOSITE,cn
-ruleset=DIRECT,[]GEOSITE,category-games@cn
-ruleset=DIRECT,[]GEOSITE,category-game-platforms-download
-ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
-; --- [第六级：核心调度与漏网之鱼兜底] ---
+; --- [第五级：代理补丁与非标端口 (GitHub 原链)] ---
 ruleset=🚀 核心调度,[]GEOSITE,gfw
-ruleset=🚀 核心调度,clash-domain:https://fastly.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,172800
-ruleset=🚀 核心调度,clash-classic:https://fastly.jsdelivr.net/gh/Aethersailor/Custom_Proxy_Classical_IP.yaml,172800
-ruleset=🔀 非标端口,clash-classic:https://fastly.jsdelivr.net/gh/Aethersailor/Custom_Port_Direct.yaml,172800
+ruleset=🚀 核心调度,clash-domain:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy_Domain.yaml,172800
+ruleset=🚀 核心调度,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy_Classical_IP.yaml,172800
+ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Port_Direct.yaml,172800
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
-; 2) 应用分流策略组 (确保与规则名称 1:1 完全对齐)
+; 2) 策略组设置 (已将 🇸🇬 SG 置于 AI 相关组首位)
 ; ==========================================================
-custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🛠 GitHub`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🟦 OKX`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
-custom_proxy_group=🟥 Adobe`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]REJECT`[]🌐 Default
-custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🧠 AI`select`[]🇸🇬 SG`[]🇺🇸 US`[]🇭🇰 HK`[]🇯🇵 JP`[]🌐 Default
+custom_proxy_group=🤖 ChatGPT`select`[]🇸🇬 SG`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=📨 Telegram`select`[]🇸🇬 SG`[]🇭🇰 HK`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🎬 YouTube`select`[]♻️ 自动选择`[]🇸🇬 SG`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🎥 Netflix`select`[]🇸🇬 SG`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🎵 TikTok`select`[]🇸🇬 SG`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🛠 GitHub`select`[]🇸🇬 SG`[]🇺🇸 US`[]DIRECT`[]🌐 Default
+custom_proxy_group=📦 Notion`select`[]🇸🇬 SG`[]🇺🇸 US`[]DIRECT`[]🌐 Default
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇸🇬 SG`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🔎 Google`select`[]🇸🇬 SG`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇸🇬 SG`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🎮 Steam`select`[]DIRECT`[]🇸🇬 SG`[]🇺🇸 US`[]🌐 Default
+custom_proxy_group=🟦 OKX`select`[]🇸🇬 SG`[]🇺🇸 US`[]DIRECT`[]🌐 Default
+custom_proxy_group=🟨 Binance`select`[]🇸🇬 SG`[]🇺🇸 US`[]DIRECT`[]🌐 Default
+custom_proxy_group=🟥 Adobe`select`[]REJECT`[]DIRECT`[]🇸🇬 SG
+custom_proxy_group=🚝 测速工具`select`[]DIRECT`[]🚀 核心调度`
 
-; ==========================================================
-; 3) 核心调度与节点池
-; ==========================================================
-custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
-custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT`[]♻️ 自动选择`[]🧊 冷门节点`[]🧭 全部节点
-custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
-custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
+; --- 基础支撑组 ---
+custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇸🇬 SG`[]🇭🇰 HK`[]🇯🇵 JP`[]🇺🇸 US`[]🧭 全部节点`[]DIRECT
+custom_proxy_group=🌐 Default`select`[]🇸🇬 SG`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
 
+; --- 节点自动化与过滤 ---
 custom_proxy_group=🧭 全部节点`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-
-; 【🧊 冷门节点】：首选 韩国(KR)、台湾(TW) 等，排除主流五区
-custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|London)).*`http://www.gstatic.com/generate_204`300,,50
-
-; 专属测速组
-custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States)`http://www.gstatic.com/generate_204`300,,50
