--- a/meta.ini
+++ b/meta.ini
@@ -105,16 +105,17 @@ custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 ; ==========================================================
-; 4) 节点自动测速与全部节点池
+; 4) 节点自动测速与全部节点池 (180s 稳健切换版)
+; 参数说明：间隔180s, 超时2000ms, 容差80ms, 禁用懒加载(false)
 ; ==========================================================
 custom_proxy_group=🧭 全部节点`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`180,2000,80`false
 
-; 【🧊 冷门节点】：现在包含 韩国(Seoul)、台湾(TW) 等所有非主流大区
-custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|London)).*`http://www.gstatic.com/generate_204`300,,50
+; 【🧊 冷门节点】：包含韩国、台湾等非主流大区
+custom_proxy_group=🧊 冷门节点`url-test`(?i)^(?!.*(🇭🇰|香港|HK|🇯🇵|日本|JP|🇸🇬|新加坡|SG|🇺🇸|美国|US|Tokyo|Osaka|Singapore|London)).*`http://www.gstatic.com/generate_204`180,2000,80`false
 
-; 专属测速组
-custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`300,,50
+; 【专属测速大区】
+custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|HK|Hong Kong|HongKong)`http://www.gstatic.com/generate_204`180,2000,80`false
+custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|JP|Japan|Tokyo|Osaka)`http://www.gstatic.com/generate_204`180,2000,80`false
+custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`180,2000,80`false
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|US|United States|America|Los Angeles)`http://www.gstatic.com/generate_204`180,2000,80`false
