--- a/meta.ini
+++ b/meta.ini
@@ -92,9 +92,14 @@ custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]
 ; ==========================================================
 ; 3) 核心调度层
 ; ==========================================================
+; 这里的逻辑是：非标端口 -> 遵循规则 -> 漏网之鱼 -> 核心调度
 custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
 custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
+
+; 关键修正：确保规则里调用的 [🔀 非标端口] 在这里有定义
+custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
+custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 ; ==========================================================
 ; 4) 节点自动测速与全部节点池 (240s 终极对齐)
