--- a/meta.ini
+++ b/meta.ini
@@ -11,7 +11,7 @@ overwrite_original_rules=true
 exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Official|Website
 
 ; ==========================================================
-; 1) 规则部分 (全原链配置)
+; 1) 规则部分
 ; ==========================================================
 ruleset=🟥 Adobe,[]GEOSITE,adobe
 ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
@@ -63,9 +63,8 @@ ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aether
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ==========================================================
-; 2) 应用分流策略组 (HK 优先排布)
+; 2) 应用分流策略组
 ; ==========================================================
-
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
 custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🌐 Default
@@ -92,17 +91,14 @@ custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]
 ; ==========================================================
 ; 3) 核心调度层
 ; ==========================================================
-; 这里的逻辑是：非标端口 -> 遵循规则 -> 漏网之鱼 -> 核心调度
 custom_proxy_group=🚀 核心调度`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 全部节点`[]DIRECT
 custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]♻️ 自动选择`[]🧭 全部节点`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
-
-; 关键修正：确保规则里调用的 [🔀 非标端口] 在这里有定义
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 ; ==========================================================
-; 4) 节点自动测速与全部节点池 (240s 终极对齐)
+; 4) 节点自动测速与全部节点池
 ; ==========================================================
 custom_proxy_group=🧭 全部节点`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`240,2000,80`false
