--- a/meta.ini
+++ b/meta.ini
@@ -36,6 +36,7 @@ ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ruleset=📦 Notion,[]GEOSITE,notion
 ruleset=📨 Telegram,[]GEOSITE,telegram
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
+ruleset=✨ Gemini,[]GEOSITE,google-gemini
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 ruleset=🍎 Apple,[]GEOSITE,apple
 ruleset=🎬 YouTube,[]GEOSITE,youtube
@@ -49,6 +50,7 @@ ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=🟦 OKX,[]GEOSITE,okx
 ruleset=🟨 Binance,[]GEOSITE,binance
 ruleset=🟪 Bybit,[]GEOSITE,bybit
+
 
 ; 基础设施
 ruleset=📞 即时通讯,[]GEOSITE,category-communication
@@ -67,7 +69,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; ==========================================================
 custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
-custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🌐 Default
+custom_proxy_group=🤖 ChatGPT`select`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🇭🇰 HK`[]🌐 Default
+custom_proxy_group=✨ Gemini`select`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🇭🇰 HK`[]🌐 Default
 custom_proxy_group=🧠 AI`select`[]🇸🇬 SG`[]🇺🇸 US`[]🇯🇵 JP`[]🇭🇰 HK`[]🌐 Default
 custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
 custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🌐 Default
