--- a/meta.ini
+++ b/meta.ini
@@ -88,7 +88,7 @@ custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]⚡ 智能优选`[]🇭🇰 
 ; ==========================================================
 
 custom_proxy_group=🚀 核心调度`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]🧭 全部节点`[]DIRECT
-custom_proxy_group=🌐 Default`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]DIRECT
+custom_proxy_group=🌐 Default`select`[]⚡ 智能优选`[]🌏 主流节点`[]🧊 冷门节点`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
