--- a/meta.ini
+++ b/meta.ini
@@ -11,16 +11,14 @@ overwrite_original_rules=true
 exclude=官网|网站|最新网址|防失联|失联|公告|通知|TG|Telegram|电报|群|频道|QQ群|客服|工单|官网地址
 
 ; ==========================================================
-; 1️⃣ 规则层 (已对接 8 小时自动更新识别程序)
+; 1️⃣ 规则层
 ; ==========================================================
 
 ; --- [最高优先级] 影视采集站 API & 视频流直连 ---
-
-; 🟢 核心：对接你自己的 GitHub 自动识别程序 (每 8 小时捕获一次变体)
-; 将下面的链接换成你自己的 MyVideo.list 的 Raw 链接
+; 🟢 核心：对接 GitHub 自动识别程序 (每 8 小时更新)
 ruleset=DIRECT,clash-classic:https://raw.githubusercontent.com/ycl2006/meta/main/MyVideo.list,28800
 
-; 只保留极少数无法通过域名识别的死硬关键词
+; 死硬关键词补漏
 ruleset=DIRECT,[]DOMAIN-KEYWORD,m3u8
 ruleset=DIRECT,[]DOMAIN-KEYWORD,index.m3u8
 
@@ -58,14 +56,15 @@ ruleset=🪟 Microsoft,[]GEOSITE,microsoft
 
 ruleset=🚀 核心调度,[]GEOSITE,gfw
 
-; --- 核心非标端口分流 ---
+; --- [次高优先级] 核心非标端口分流 ---
+; 如果没命中上面的域名，再看是不是非标端口
 ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Port_Direct.yaml,172800
 
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ; ==========================================================
-; 2️⃣ 应用策略组
+; 2️⃣ 应用策略组 (保持不变)
 ; ==========================================================
 custom_proxy_group=🤖 ChatGPT`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK
 custom_proxy_group=✨ Gemini`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇺🇸 US`[]🇭🇰 HK
@@ -93,22 +92,22 @@ custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]⚡ 智能优选`[]🇭🇰 
 
 
 ; ==========================================================
-; 3️⃣ 核心调度层
+; 3️⃣ 核心调度层 (关键修正点)
 ; ==========================================================
 custom_proxy_group=🚀 核心调度`select`[]⚡ 智能优选`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]🧭 全部节点`[]DIRECT
 custom_proxy_group=🌐 Default`select`[]⚡ 智能优选`[]🌏 主流节点`[]🧊 冷门节点`[]🇸🇬 SG`[]🇯🇵 JP`[]🇭🇰 HK`[]🇺🇸 US`[]DIRECT
+
+; 🔴 修正：漏网之鱼默认走核心调度，非标端口默认直接 DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 核心调度`[]🌐 Default`[]DIRECT
-custom_proxy_group=🔀 非标端口`select`[]DIRECT`[]🐟 遵循规则
-custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
+custom_proxy_group=🔀 非标端口`select`[]DIRECT`[]🚀 核心调度
+custom_proxy_group=🐟 遵循规则`select`[]DIRECT`[]🐟 漏网之鱼
 
 
 ; ==========================================================
-; 4️⃣ 自动测速与节点归类
+; 4️⃣ 自动测速与节点归类 (保持不变)
 ; ==========================================================
 custom_proxy_group=⚡ 智能优选`url-test`(?i)(🇸🇬|SG|Singapore|🇯🇵|JP|Japan|🇭🇰|HK|Hong Kong|🇺🇸|US|United States)`https://www.gstatic.com/generate_204`300,600,50
-
 custom_proxy_group=🧭 全部节点`select`.*
-
 custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|SG|Singapore)`https://www.gstatic.com/generate_204`300,600,50
 custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|JP|Japan|Tokyo|Osaka)`https://www.gstatic.com/generate_204`300,600,50
 custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|HK|Hong Kong)`https://www.gstatic.com/generate_204`300,600,50
