--- a/meta.ini
+++ b/meta.ini
@@ -56,6 +56,10 @@ ruleset=🪟 Microsoft,[]GEOSITE,microsoft
 
 ruleset=🚀 核心调度,[]GEOSITE,gfw
 
+; --- [核心补漏] 如果上面都没命中，但 IP 归属地是中国，直接放行 ---
+; 这能秒杀所有脚本还没抓到的新马甲域名
+ruleset=DIRECT,[]GEOIP,cn,no-resolve
+
 ; --- [次高优先级] 核心非标端口分流 ---
 ; 如果没命中上面的域名，再看是不是非标端口
 ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Port_Direct.yaml,172800
